--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
         <relativePath/>
     </parent>
     
-    <groupId>org.irri.snpseek</groupId>
-    <artifactId>snpseek-api</artifactId>
-    <version>1.0.0</version>
-    <name>snpseek API</name>
-    <description>SNPseek API implementation</description>
+    <groupId>com.example</groupId>
+    <artifactId>brapi-server</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>brapi-server</name>
+    <description>BrAPI Server Implementation</description>
     
     <properties>
         <java.version>17</java.version>
