--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,11 +31,12 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update  # CHANGED from create-drop for production
+      ddl-auto: none  # CHANGED from create-drop for production
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+        default_schema: public
         jdbc:
           lob:
             non_contextual_creation: true
@@ -48,7 +49,6 @@ spring:
 logging:
   level:
     org.springframework.web: INFO
-    com.snpseek: DEBUG
-    com.example.brapi: DEBUG
+    org.irri.snpseek: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
