--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     
     <groupId>org.irri.snpseek</groupId>
     <artifactId>snpseek-api</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <name>snpseek API</name>
     <description>Snpseek API Implementation</description>
     
@@ -92,6 +92,7 @@
                 </configuration>
             </plugin>
         </plugins>
+         <finalName>snpseek-api</finalName>
     </build>
     <repositories>
 	    <repository>
