--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,55 +12,42 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
       - name: Cache Maven packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
       - name: Build & Test
-        run: ./mvnw clean package
+        run: ./mvnw clean package -DskipTests
 
       - name: Upload JAR artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: app-jar
           path: target/*.jar
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted        # ← changed (VPN server)
     needs: build-and-test
     if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Download JAR
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: app-jar
 
-      - name: Copy JAR to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "*.jar"
-          target: "/opt/snpseek-api/"
-
-      - name: Restart app on server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            sudo systemctl restart snpseek-api
-            sudo systemctl status snpseek-api --no-pager
+      - name: Deploy JAR
+        run: |
+          mv *.jar /opt/snpseek-api/snpseek-api.jar
+          sudo systemctl restart snpseek-api
+          sudo systemctl status snpseek-api --no-pager
