--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,12 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
+      - name: Grant execute permission for mvnw
+        run: chmod +x mvnw        # ← add this step
+
+      - name: Build & Test
+        run: ./mvnw clean package -DskipTests
+
       - name: Build & Test
         run: ./mvnw clean package -DskipTests
 
