--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ springdoc:
     path: /api-docs  # Remove the /v3 prefix
   swagger-ui:
     path: /swagger-ui
+    config-url: /api/api-docs
+    url: /api/api-docs
 
 spring:
   application:
