--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ springdoc:
 
 spring:
   application:
-    name: SNPSeek-BrAPI-Server
+    name: SNPSeek-API-Server
   
   # PostgreSQL Configuration
   datasource:
