--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ server:
 
 springdoc:
   api-docs:
-    path: /api-docs  # Remove the /v3 prefix
+    path: /api-docs
   swagger-ui:
     path: /swagger-ui
-    config-url: /snpseek-api/api-docs
-    url: /snpseek-api/api-docs
+    config-url: /api/api-docs        # ← updated
+    url: /api/api-docs               # ← updated
 
 spring:
   application:
