--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /swagger-ui
-    url: /api-docs
+    url: /ws/api-docs
     disable-swagger-default-url: true
   servers:
     - public-url: ${APP_PUBLIC_URL}        # ← use env var
